--- a/resources/docker-compose-domain.yml
+++ b/resources/docker-compose-domain.yml
@@ -7,7 +7,7 @@ services:
         container_name: sys-bibbox-sync-domain
         restart: unless-stopped
         environment:
-            ELASTIC_BASE_URL: 'http://http://bibbox-hq-elastic.tools.bbmri-eric.eu/'
+            ELASTIC_BASE_URL: 'http://bibbox-hq-elastic-el.tools.bbmri-eric.eu/'
             SYNC_PATH: '/opt/bibbox/sys-bibbox-sync/data'
         command: /opt/scripts/entrypoint.sh
         depends_on:
