--- a/resources/docker-compose-technical.yml
+++ b/resources/docker-compose-technical.yml
@@ -9,7 +9,7 @@ services:
         environment:
             ELASTIC_BASE_URL: 'http://bibbox-hq-elastic-el.tools.bbmri-eric.eu/'
             SYNC_PATH: '/opt/bibbox/sys-bibbox-sync/data'
-            LOGGER_LEVEL: DEBUG
+            LOGGER_LEVEL: ERROR
         command: /opt/scripts/entrypoint.sh
         depends_on:
             - sys-bibbox-sync-technical-data
